# forge

./: .gitignore  CLAUDE.md  IN_saved_data.mat  OH_saved_data.mat  PRD.md  README.md  REFACTORING_PLAN.md  learning_algorithm_categories_22-Feb-2017.docx  learning_algorithm_coded_2017-02-22.xlsx  learning_algorithm_data_02-Apr-2016.mat  learning_algorithm_results.xlsx  learning_algorithm_results_02-Apr-2016.xlsx  learning_algorithm_results_15-Mar-2016.mat  nn_toolbox_setup.m  paraeto_surface_maximized.fig  pyproject.toml  saved_data.mat  startup.m  t_set_test.xlsx  temp.mat  testdata.xlsx  tester.m
+error_correction/: elo_scoring.m  k_factor_error.m
+finance/: mergeData.m  process.m
+la/: checkExistingFiles.m  classifyBill.m  cleanupText.m  findSimilarCategories.m  generateAdjacencyMatrix.m  generateConciseMaps.m  generateLearningTable.m  getCommonWordsList.m  learning_algorithm_coded_adjacency.xlsx  learning_algorithm_coded_concise.xlsx  learning_algorithm_data.mat  loadLearnedMaterials.m  main.m  optimizeFrontier.m  optimizeFrontierSimple.m  optimizeFrontierSimple_old.m  policy_frequency.csv  processAlgorithm.m  stats.m  subject_frequency.csv  xmlparse.m
+plot/: generateHistograms.m  generatePlots.m  makeGif.m  plotRunner.m
+predict/: getSpecificImpact.m  plotTSet.m  updateBayes.m  updateBayes_old.m
+util/: CStrAinBP.mexw64  count_rollcalls.m  createIDstrings.m  createTable.m  diffAndMerge.m  greaterThanZero.m  learningAlgorithm.m  mergeSeniority.m  mergeShorMcCarty.m  parse_json.m  readJSON.m  setRandomSeed.m  slocDir.m  slocRunner.m  xml2struct.mexw64
(+41069 files in other folders)
